--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="digit" value="9">9</button>
             </div>
             <div class="operators">
-                <button class="equal__button">=</button>
+                <button class="operator__button" value="=">=</button>
                 <button class="operator__button" value="+">+</button>
                 <button class="operator__button" value="-">-</button>
                 <button class="operator__button" value="/">/</button>
