--- a/index.html
+++ b/index.html
@@ -10,32 +10,43 @@
 </head>
 <body>
     <header>
-        <h1>Calculator</h1>
+        <h1></h1>
     </header>
     <div class="canvas">
-        <div class="display"></div>
+        <div class="display_canvas">
+        <div class="display">1234567</div>
+        </div>
         <div class="buttons">
-            <div class="numbers">
-                <button class="digit" value="0">0</button>
-                <button class="digit" value="1">1</button>
-                <button class="digit" value="2">2</button>
-                <button class="digit" value="3">3</button>
-                <button class="digit" value="4">4</button>
-                <button class="digit" value="5">5</button>
-                <button class="digit" value="6">6</button>
-                <button class="digit" value="7">7</button>
-                <button class="digit" value="8">8</button>
-                <button class="digit" value="9">9</button>
-            </div>
-            <div class="operators">
-                <button class="operator__button" value="=">=</button>
-                <button class="operator__button" value="+">+</button>
-                <button class="operator__button" value="-">-</button>
-                <button class="operator__button" value="/">/</button>
-                <button class="operator__button" value="*">*</button>
-                <button class="clear">clear</button>
+                <div class="row row1">
+                    <button class="clear">C</button>
+                    <button class="digit" value="0">0</button>
+                    <button class="digit" >.</button>
+                    <button class="operator__button" value="/">&#247;</button>
+                </div>
+                <div class="row row1">
+                    <button class="digit" value="7">7</button>
+                    <button class="digit" value="8">8</button>
+                    <button class="digit" value="9">9</button>
+                    <button class="operator__button" value="*">x</button>  
+                </div>
+                <div class="row row1">
+                    <button class="digit" value="4">4</button>
+                    <button class="digit" value="5">5</button>
+                    <button class="digit" value="6">6</button>
+                    <button class="operator__button" value="-">&#8722;</button>
+                </div>
+                <div class="row row1">
+                    <button class="digit" value="1">1</button>
+                    <button class="digit" value="2">2</button>
+                    <button class="digit" value="3">3</button>
+                    <button class="operator__button" value="+">+</button>
+                </div>
+               
+                
+        </div>
 
-            </div>
+        <div class="row">
+            <button class="operator__button equal_button" value="=">=</button>
         </div>
     </div>
 
